--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,13 @@ jobs:
 
       - name: Show updated changelog
         run: |
-          cat debian/changelog
+          cat ${{ github.workspace }}/debian/changelog
 
       - name: Upload patched src as artifact
         uses: "actions/upload-artifact@v2"
         with:
           name: "${{ env.GITHUB_REPOSITORY_NAME }}-#${{ env.GITHUB_SHA_SHORT }}-changelog"
-          path: debian/changelog
+          path: ${{ github.workspace }}/debian/changelog
 
   debian:
     runs-on: ubuntu-20.04
